<resources>
    <string name="app_name">FriendsFeed</string>

    <string name="ff_hint_username">Username</string>
    <string name="ff_hint_password">Password</string>
    <string name="ff_button_sign_in">Login</string>
    <string name="ff_button_register">Sign up</string>

    <string name="ff_hint_Full_Name">Full Name</string>
    <string name="ff_hint_email">email@example.com</string>
    <string name="ff_hint_Confirm_Password">Confirm Password</string>
    <string name="ff_hint_DOB">Date of Birth</string>




    <string name="ff_button_cancel">Cancel</string>
    <string name="ff_error_password">Password must contain at least 8 characters.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
